--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -25,11 +25,10 @@
   </div>
   <footer>
     <div class="footer-top">
-        <a href="{% url 'demos:introduce' %}">서비스소개</a>
-        <a href="{% url 'demos:review' %}">리뷰</a>
-        <a href="{% url 'demos:community' %}">커뮤니티</a>
-        <a href="{% url 'demos:work' %}">협력문의</a>
-        </ul>
+        <a href="{% url 'demos:introduce' %}">Service</a>
+        <a href="{% url 'demos:home' %}">About Us</a>
+        <a href="{% url 'demos:home' %}">Guide Map</a>
+        <a href="#">Q&A</a>
     </div>
     <div class="footer-bottom">
         <a href="{% url 'demos:github' %}"><i class="ri-github-fill"></i></a>
