--- a/templates/base.html
+++ b/templates/base.html
@@ -30,12 +30,12 @@
         </header>
         <main>
             <div id="menu" class="menu">
-                <a href="demos:introduce">서비스 소개</a>
-                <a href="demos:review">리뷰</a>
-                <a href="demos:community">커뮤니티</a>
-                <a href="demos:work">협력문의</a>
+                <a href="{% url 'demos:home' %}" >Home</a>
+                <a href="{% url 'demos:introduce' %}">Service</a>
+                <a href="{% url 'demos:home' %}">About Us</a>
+                <a href="{% url 'demos:home' %}">Guide Map</a>
                 <a href="#">Q&A</a>
-              </div>
+            </div>
             {% block content %}
             {% endblock %}
         </main>
