--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -103,7 +103,7 @@ html {
 }
 body {
   line-height: 1;
-  font-family: "Source Sans 3", sans-serif;
+  font-family: 'DM Sans', sans-serif;
   overflow-x: hidden;
 }
 blockquote,
