--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -19,7 +19,7 @@
     border: none;
     width:70%;
     height: 100%;
-    background-color: aliceblue;
+    background-color: var(--white);
     border-radius: 4px;
     padding: 5px;
 }
@@ -27,28 +27,27 @@
     border: none;
     width:10%;
     height: 100%;
-    background-color: #007bff;
+    background-color: var(--white);
     cursor: pointer;
     padding:5px;
     border-radius: 4px;
-    color: white;
     font-size: 1.2rem;
+    color: black;
 }
 .list-button{
     border: none;
-    width: 20%;
+    width: 25%;
     height: 100%;
-    background-color: #007bff;
+    background: var(--btn);
     cursor: pointer;
     font-size: 1.2rem;
     border-radius: 4px;
-    color: white;
-    padding: 5px;
+    font-size: 1.3rem;
 }
 .off-button{
     margin-top: 2.5rem;
     border: none;
-    background-color: aliceblue;
+    background-color: var(--btn);
     cursor: pointer;
     padding: 1rem;
     border-radius: 4px;
@@ -96,7 +95,7 @@
     bottom: 308px;
     height: 200px;
     overflow-y: auto;
-    background:rgba(255, 255, 255, 0.7);
+    background:rgba(255, 255, 255, 0.9);
     padding: 20px 30px;
     border-radius: 8px;
     font-size: 15px;
@@ -224,20 +223,20 @@
 }
 .review-btn, .community-btn{
     padding: 10px;
-    background: #007bff;
+    background: var(--btn);
     color: #fff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    color: black;
 }
 .input-msg {
     flex-direction: row;
 }
 .review-item {
-
     box-shadow: 0 4px 5px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    margin-block: 20px;
+    margin: 20px;
 }
 .review-item p {
     margin-top: 10px;
