--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -61,7 +61,7 @@
         <script>
             document.getElementById('keyword').value = localStorage.getItem('search_txt') || '';
         </script>
-        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=&libraries=services"></script>
+        <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{ MAP_KEY }}&libraries=services"></script>
         <script>
             var markers = [];
             var parkingData = [];
