--- a/templates/base.html
+++ b/templates/base.html
@@ -14,10 +14,12 @@
   <body>
     <div class="container">
         <header>
-            <div class="logo"><a href="{% url 'demos:home' %}">jisungpark</a></div>
+            <div class="logo">
+              <a href="{% url 'demos:home' %}">jisungpark</a>
+            </div>
             <div class="header-nav">
                 {% if user.is_authenticated %}
-                    <a>({{ user.username }})님</a>
+                    <a href="{% url 'demos:home' %}">({{ user.username }})님</a>
                     <a href="{% url 'account_logout' %}">Logout</a>
                 {% else %}
                     <a href="{% url 'account_login' %}">Signin</a>
