feat: review 주차장별로

--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -236,7 +236,9 @@
 .review-item {
     box-shadow: 0 4px 5px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    margin: 20px;
+    margin-block: 20px;
+    width: 25rem;
+    border-radius: 4px;
 }
 .review-item p {
     margin-top: 10px;
