--- a/static/css/style-pth.css
+++ b/static/css/style-pth.css
@@ -241,3 +241,10 @@
 .review-item p {
     margin-top: 10px;
 }
+.sort-btn{
+    display: flex;
+    flex-direction: row;
+}
+.sort-btn input{
+    width: 15%;
+}
